--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <title> Trabajando con Firebase </title>
   </head>
   <body>
+    <button type="button" id="button-google"> acceso con google </button>
     <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase-auth.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
